# crm_django

./: .pylintrc  LICENSE  TODO.txt  pyproject.toml  requirements.txt
crm_service/accounts/: urls.py  views.py
crm_service/ads/: admin.py  dto_ads_company.py  forms.py  models.py  services.py  urls.py  views.py
crm_service/ads/migrations/: 0001_initial.py  0002_promotionchannel_alter_adscompany_channel.py
crm_service/ads/models_as_description/: __init__.py  promotion_channels.py
crm_service/ads/tests/: test_services.py
crm_service/api/: api.py  urls.py
crm_service/api/routers/: product_router.py
crm_service/api/schemas/: common_schemas.py
crm_service/auth/: models.py
crm_service/contracts/: admin.py  dto_contracts.py  forms.py  models.py  services.py  urls.py  views.py
crm_service/contracts/contracts/: contract_form.html
crm_service/contracts/migrations/: 0001_initial.py  0002_contract_cost.py  0003_alter_contract_product.py  0004_alter_contract_file_document.py
crm_service/core/: base.py  check_user_service.py
crm_service/crm_service/: settings.py  urls.py  views.py
crm_service/customers/: admin.py  dto_customers.py  forms.py  models.py  urls.py  views.py
crm_service/customers/migrations/: 0001_initial.py  0002_alter_customer_contract.py  0002_initial.py  0003_alter_customer_options_and_more.py  0004_remove_customer_is_active.py  0005_customer_archived.py  0006_alter_customer_archived.py
crm_service/exception/: exc.py
crm_service/leads/: admin.py  dto_lead.py  forms.py  models.py  services.py  urls.py  views.py
crm_service/leads/migrations/: 0001_initial.py  0002_alter_lead_campaign.py  0003_alter_lead_campaign_alter_lead_middle_name.py  (+1 more)
crm_service/mixins/: timestamp.py
crm_service/service_product/: admin.py  apps.py  dto_product.py  forms.py  layer_repository.py  models.py  services.py  urls.py  views.py
crm_service/utils/: keyboard.py
leads/: models.py
(+54 files in other folders)
