[tool.poetry]
name = "crm django"
version = "0.1.0"
description = "Learning how to create a django app"
authors = ["Дмитрий Афанасьев <wackymc@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
django-redis = "^5.4.0"
django-filter = "^25.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
